ajustado properties para elasticmq

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=relatorios-arquitetura-hexagonal
+
+# SQS (para uso local com ElasticMQ no docker-compose)
+sqs.endpoint=${SQS_ENDPOINT:http://elasticmq:9324}
+aws.region=us-east-1
+aws.credentials.access-key=dummy
+aws.credentials.secret-key=dummy
